--- a/app.css
+++ b/app.css
@@ -1,10 +1,14 @@
  
 #map {
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
 }
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+#login {
+    float :right;
 }
