--- a/app.css
+++ b/app.css
@@ -1,5 +1,4 @@
- 
-#map {
+ #map {
     height: 100%;
     width: 100%;
 }
@@ -11,4 +10,10 @@ html, body {
 
 #login {
     float :right;
+    
+}
+
+.tabela{
+    font-family: verdana;
+    font-size:90%;
 }
