Criando label que será preenchida com o nome do usuário após autenticado

--- a/Css/app.css
+++ b/Css/app.css
@@ -17,3 +17,10 @@ html, body {
     font-family: verdana;
     font-size:90%;
 }
+
+#nomeUsuario{
+    font-family: verdana;
+    font-size:150%;
+    color:white;
+    
+}
