Adicionando opção de cadastrar localidade para usuários autenticados e teste com marcadores

--- a/Css/app.css
+++ b/Css/app.css
@@ -22,5 +22,8 @@ html, body {
     font-family: verdana;
     font-size:150%;
     color:white;
-    
+}
+
+#btCadastrar{
+    visibility : hidden;
 }
