Adicionando atualização de avaliação caso o usuário já tenha feito uma avaliação para determinada localidade

--- a/Css/app.css
+++ b/Css/app.css
@@ -28,7 +28,18 @@ html, body {
     visibility : hidden;
 }
 
-#avaliar{
+#titulo{
+    visibility :hidden;
+}
+
+#nota{
+    visibility :hidden;
+}
+#comentario{
+    visibility :hidden;
+}
+#botao{
     visibility: hidden;
 }
+
 
