--- a/Css/app.css
+++ b/Css/app.css
@@ -2,6 +2,16 @@
     height: 80%;
     width: 100%;
 }
+
+h2{
+    font-size:20px;
+    color: #B22222;
+    font-family: Georgia;
+}
+
+#mapa{
+    height: 100%;
+}
 html, body {
     height: 100%;
     margin: 0;
@@ -12,10 +22,16 @@ html, body {
     float :right;
 }
 
-.tabela,.localidade{
+.tabela{
     font-family: verdana;
     font-size:15px;
     color:#B22222;
+}
+
+.localidade{
+    font-family: Georgia;
+    font-size: 20px;
+    color: #B22222;
 }
 
 #nomeUsuario{
@@ -48,7 +64,6 @@ html, body {
 
 .comentarios  {
     background-color: white;
-    border : 1px solid black;
     width: 50%;
 }
 
@@ -56,7 +71,7 @@ button, input[type=submit]{
 
     display: inline-block;
     border:1px solid #B22222;
-    
+
     border-radius: 3px 3px 3px 3px;
     -webkit-border-radius: 3px 3px 3px 3px;
     -moz-border-radius: 3px 3px 3px 3px;
@@ -64,9 +79,12 @@ button, input[type=submit]{
     width: auto;
     height: auto;
     font-style: bold;
-    box-shadow: inset 0 1px 0 0 #B22222,inset 0 -1px 0 0 #B22222,inset 0 0 0 1px #B22222,0 2px 4px 0 #D4D4D4;
-    -moz-box-shadow: inset 0 1px 0 0 #FFF6CE,inset 0 -1px 0 0 #E3C852,inset 0 0 0 1px #FCE88D,0 2px 4px 0 #D4D4D4;
-    -webkit-box-shadow: inset 0 1px 0 0 white,inset 0 -1px 0 0 WHITE,inset 0 0 0 1px white,0 2px 4px 0 white;
+    box-shadow: inset 0 1px 0 0 #B22222,inset 0 -1px 0 0 #B22222,inset 0 0 0 1px
+        #B22222,0 2px 4px 0 #D4D4D4;
+    -moz-box-shadow: inset 0 1px 0 0 #FFF6CE,inset 0 -1px 0 0 #E3C852,inset 0 0 
+        0 1px #FCE88D,0 2px 4px 0 #D4D4D4;
+    -webkit-box-shadow: inset 0 1px 0 0 white,inset 0 -1px 0 0 WHITE,inset 0 0 0
+        1px white,0 2px 4px 0 white;
     text-shadow: 0 1px 0 white;
     font-size: 13px;
     padding: 10px 10px;
@@ -74,11 +92,14 @@ button, input[type=submit]{
     background-color: #B22222;
 }
 button,input[type=submit]:hover{
-    
+
     background-color: #FA8072;
-    box-shadow: inset 0 1px 0 0 #B22222,inset 0 -1px 0 0 #B22222,inset 0 0 0 1px #B22222,0 2px 4px 0 #D4D4D4;
-    -moz-box-shadow: inset 0 1px 0 0 #FFF6CE,inset 0 -1px 0 0 #E3C852,inset 0 0 0 1px #FCE88D,0 2px 4px 0 #D4D4D4;
-    -webkit-box-shadow: inset 0 1px 0 0 white,inset 0 -1px 0 0 WHITE,inset 0 0 0 1px white,0 2px 4px 0 white;
+    box-shadow: inset 0 1px 0 0 #B22222,inset 0 -1px 0 0 #B22222,inset 0 0 0 1px
+        #B22222,0 2px 4px 0 #D4D4D4;
+    -moz-box-shadow: inset 0 1px 0 0 #FFF6CE,inset 0 -1px 0 0 #E3C852,inset 0 0 0
+        1px #FCE88D,0 2px 4px 0 #D4D4D4;
+    -webkit-box-shadow: inset 0 1px 0 0 white,inset 0 -1px 0 0 WHITE,inset 0 0 0
+        1px white,0 2px 4px 0 white;
 }
 
 a{
@@ -100,9 +121,9 @@ a:hover{
 
 input {
     color : #B22222;
-    font-family: fantasy;
-    
+    font-family: fantasy;   
     border: 2px solid lightgray;
+    font-size: 15px;
 }
 
 input.palavras {
@@ -112,4 +133,9 @@ input.palavras {
 
 .topo{
     color:white;
+}
+
+
+hr{
+    width: 98%;
 }
